--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,12 @@
 <link rel="stylesheet" type="text/css" href="/src/app/home/home.component.css"  media="screen" /> 
 </head>
 <body>
+    
 <app-header></app-header>
 
 
 
 <router-outlet></router-outlet>
+
+</body>
+</html>
