--- a/src/app/datos-clase/datos-clase.component.css
+++ b/src/app/datos-clase/datos-clase.component.css
@@ -2,15 +2,14 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
-    max-width: 800px;
+    max-width: 1500px;
     padding: 20px;
-   
-    margin-top: 20%;
+    margin-top: 1%;
 }
 
 .flip-card {
-    width: 100%;
-    height: 400px;
+    width: 250px;
+    height: 350px;
     perspective: 1000px;
 }
 
@@ -71,5 +70,6 @@ img {
 
     .flip-card {
         height: 250px;
+        height: 350px;
     }
 }
