--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -10,7 +10,7 @@
 <body>
    <main>
     <div class="cajaPerfil">
-        <img src="https://s3.amazonaws.com/files.d20.io/images/362364155/D88IeUUSFgO4kDmDXFF01g/med.jpg?1696756335422&size=200x200"/>
+        <img src=""/>
         <input type="file" name="" id="imagen" accept="image/*">
         <label for="imagen">Editar imagen</label>
         <input type="text" name="" placeholder="Nombre de usuario">
