--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,13 +8,13 @@
 <body>
    
         <section>
-            <img src="https://images.ctfassets.net/swt2dsco9mfe/2GkyABEimdUD9oOKuIMRn6/76f0f925f173ef3d44e4b0126127415e/312242_1920x1342.jpg?q=70" alt="">
+            <img src="/assets/imagenPortada1.jpg" alt="Escapando del peligro">
      
-            <img src="https://cdn.vox-cdn.com/thumbor/l9L9YGFs2MFdYshsS48hJNc6Rqk=/0x469:2773x2566/1400x933/filters:focal(1233x1130:1675x1572):no_upscale()/cdn.vox-cdn.com/uploads/chorus_image/image/61861299/D_D_Art_and_Arcan__Regular_Edition__book_cover.0.jpg" alt="">
+            <img src="/assets/imagenPortada2.jpg" alt="Imagen original de Dungeons and Dragons">
        
-            <img src="https://static1.cbrimages.com/wordpress/wp-content/uploads/2023/01/an-exhausted-d-d-party-dnd-official-art.jpg" alt="">
+            <img src="/assets/imagenPortada3.jpg" alt="Selune">
         
-            <img src="https://assetsio.reedpopcdn.com/dnd-5e-strixhaven-curriculum-of-chaos-artwork-2.jpg?width=1200&height=1200&fit=bounds&quality=70&format=jpg&auto=webp" alt="">
+            <img src="/assets/imagenPortada4.jpg" alt="Grupo camino a Strixhaven">
       
         </section>
 </body>
